<resources>
    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a messageItem</string>
    <string name="button_send">Send</string>
    <string name="toActivityTest">跳转ActivityTest</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="button_test_jump">测试跳转</string>
    <string name="button_test_back">测试返回数据</string>
    <string name="button_test_dialog">启动弹框Activity</string>
    <string name="button_test_normal">启动正常Activity</string>
    <string name="toLayoutTest">跳转LayoutTest</string>
    <string name="toListView">跳转ListView</string>
    <string name="toRecyclerView">跳转RecyclerView</string>
    <string name="toChat">跳转Chat</string>
    <string name="toFragment">跳转Fragment</string>
    <string name="toNews">跳转News</string>
    <string name="toBroadcast">跳转Broadcast</string>
    <string name="sendBroadcast">发送广播消息</string>
</resources>